--- a/gb/18/4/2/n10270963.md
+++ b/gb/18/4/2/n10270963.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/payasr386/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/payasr386/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/payasr386/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/payasr386/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/payasr386/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/payasr386/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/payasr386/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/payasr386/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/payasr386/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/payasr386/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/payasr386/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/payasr386/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/payasr386/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/payasr386/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/payasr386/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>澳洲是否设立互惠保姆签证类别 前景仍不明朗</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年04月02日讯】（大纪元记者肖婕<ahref="https://github.com/payasr386/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）联邦政府拒绝在今年联邦预算案前，对是否<ahref="https://github.com/payasr386/djy/blob/master/gb/tag/%E8%AE%BE%E7%AB%8B.md#1">设立</a>一个特殊的<ahref="https://github.com/payasr386/djy/blob/master/gb/tag/%E4%BA%92%E6%83%A0%E4%BF%9D%E5%A7%86%E7%AD%BE%E8%AF%81.md#1">互惠保姆签证</a>类别进行推测。多年来，澳洲工商业联合会（ACCI）和互惠保姆机构Au Pairs一直在为<ahref="https://github.com/payasr386/djy/blob/master/gb/tag/%E8%AE%BE%E7%AB%8B.md#1">设立</a>这种新的签证类别进行游说。</p>
-<p>据澳新社消息，助理内务部长霍克（Alex Hawke）去年曾说，政府正在考虑允许互惠保姆在<ahref="https://github.com/payasr386/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>停留两年，在食宿费包付的情况下再领取最低工资或零用钱。</p>
-<p>上周，内务部长达顿（Peter Dutton）被指曾利用部长自由裁决权，以公共利益为由，向被拘留在移民中心的两名年轻女子发放签证，使<ahref="https://github.com/payasr386/djy/blob/master/gb/tag/%E4%BA%92%E6%83%A0%E4%BF%9D%E5%A7%86%E7%AD%BE%E8%AF%81.md#1">互惠保姆签证</a>的问题再次成为人们的聚焦点。</p>
+<p>【大纪元2018年04月02日讯】（大纪元记者肖婕<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）联邦政府拒绝在今年联邦预算案前，对是否<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%AE%BE%E7%AB%8B.md#1">设立</a>一个特殊的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%BA%92%E6%83%A0%E4%BF%9D%E5%A7%86%E7%AD%BE%E8%AF%81.md#1">互惠保姆签证</a>类别进行推测。多年来，澳洲工商业联合会（ACCI）和互惠保姆机构Au Pairs一直在为<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%AE%BE%E7%AB%8B.md#1">设立</a>这种新的签证类别进行游说。</p>
+<p>据澳新社消息，助理内务部长霍克（Alex Hawke）去年曾说，政府正在考虑允许互惠保姆在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>停留两年，在食宿费包付的情况下再领取最低工资或零用钱。</p>
+<p>上周，内务部长达顿（Peter Dutton）被指曾利用部长自由裁决权，以公共利益为由，向被拘留在移民中心的两名年轻女子发放签证，使<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%BA%92%E6%83%A0%E4%BF%9D%E5%A7%86%E7%AD%BE%E8%AF%81.md#1">互惠保姆签证</a>的问题再次成为人们的聚焦点。</p>
 <p>第一个案例发生于2015年6月，其中一名互惠保姆的签证在布里斯本国际机场被取消，但在她打了个电话几小时后，达顿批准给予了她新的签证。</p>
 <p>第二个案例发生在同年11月，时任移民部长达顿不顾移民部的书面警告，批准给予了另一名互惠保姆旅游签证。移民部的书面警告认为，向这名曾咨询过工作限制的女子发放旅游签证具有“高风险”。</p>
 <p>达顿坚称，他不知道这两人是谁，她们也不是为他家工作，但是他说将她们驱逐出境是不合适的。</p>
@@ -25,47 +25,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/15/5/28/n4444844.md#1">加拿大记者：澳洲在变成无聊保姆式国家</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/17/2/1/n8766196.md#1">持457签证来澳护士数量近年急剧下降</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/17/4/19/n9053173.md#1">澳洲政府取消457工作签证 各界褒贬不一</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/17/4/20/n9056054.md#1">分析显示：澳457签证被滥用 改革势在必行</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/17/6/28/n9328162.md#1">想移民澳洲？官方公布新技术移民职业清单</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/17/7/15/n9404749.md#1">7月开始实行的技术移民和工作签证新变化</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/11/n13014077.md#1">疫情致海外雇员骤减 澳洲职业保姆短缺</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/11/n13014068.md#1">上百居民抗议飞机噪音</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/10/n13012472.md#1">留学生有望下半年返回悉尼 每月500人</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/10/n13012447.md#1">澳洲第二名女子接种疫苗后死亡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/5/28/n4444844.md#1">加拿大记者：澳洲在变成无聊保姆式国家</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/2/1/n8766196.md#1">持457签证来澳护士数量近年急剧下降</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/4/19/n9053173.md#1">澳洲政府取消457工作签证 各界褒贬不一</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/4/20/n9056054.md#1">分析显示：澳457签证被滥用 改革势在必行</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/28/n9328162.md#1">想移民澳洲？官方公布新技术移民职业清单</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/7/15/n9404749.md#1">7月开始实行的技术移民和工作签证新变化</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741385.md#1">法律专家吁加强移民工人保护 防止雇主剥削</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741365.md#1">伪装成受害者行骗 悉尼女第100次犯罪被判刑</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741352.md#1">Woolworths将以2.43亿收购在线平台MyDeal</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741323.md#1">7月起 澳洲小型家庭电费一年或增近200元</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010192.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846893.md#1" target="_blank">律师依法为法轮功做无罪辩护 遭中共打压</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/21/n10237420.md#1" target="_blank">中共淫乱的前生今世（4）央视“后宫”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/4/n12999902.md#1">【未解之谜】文革横死 转世复仇</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/3/n12996820.md#1">【忽必烈传】建开平引轰动 蒙哥攻宋驾崩</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/5/30/n12986204.md#1">岳飞去世20年才平反 84年后才昭雪</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/5/n13001368.md#1">大法超常 神奇无处不在（上）</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/10/n13013738.md#1">【重播】博明参院作证：美中竞争及病毒起源</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/10/n13012276.md#1">【有冇搞错】中共战狼陷困境 放软姿态已太迟</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/5/11/n12940574.md#1">【思想领袖】洛特：枪支管制减少犯罪是误区</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/7/n13005910.md#1">江浙独立学院改职本引爆学潮 被迫叫停</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/8/n13007238.md#1">【有冇搞错】王沪宁失势和内部毛派被抓</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/7/n13006002.md#1">王友群：中南海再次面临惊涛骇浪</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/8/n13007127.md#1">梧桐妹收简体字威胁讯息 贾静雯紧急报案</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/9/n13011043.md#1">与小38岁杨紫同台 赵雅芝冻龄外表惊人</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/7/n13006080.md#1">孙俪晒照庆结婚十周年 邓超转发帖文搞笑夸妻</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/10/n13011593.md#1">闺密晒两人5年前后对比照 孙俪仿佛逆生长</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/8/n13008672.md#1">洪卓立大陆拍戏高处坠下 口吐白沫紧急送医</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/7/n13003932.md#1">掉发 白发 发质差？五大原因和改善方法</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/8/n13006901.md#1">印度象夫过世 大象前来吊唁 场面催人泪下</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/9/n13009767.md#1">史上首次！ 美国海军以无人机进行空中加油</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/9/n13009152.md#1">一生一次的体验 美国男子钓到金色大口黑鲈</a></li>
-<li><a href="https://github.com/payasr386/djy/blob/master/gb/21/6/8/n13007982.md#1">新冠死亡中 10人有8人是这族群 如何自保？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/payasr386/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/payasr386/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/2/n10270963.htm">澳洲是否设立互惠保姆签证类别 前景仍不明朗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/2/n10270963.htm">澳洲是否设立互惠保姆签证类别 前景仍不明朗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/payasr386/djy/blob/master/gb/18/4/2/n10270963.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/payasr386/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/payasr386/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/payasr386/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/payasr386/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/payasr386/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/18/4/2/n10270963.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
